--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300i,400,500i,700|Roboto:400,700&display=swap"
           rel="stylesheet">
     <title>MoGo</title>
+    <script src="https://kit.fontawesome.com/68f86c23c2.js" crossorigin="anonymous" defer></script>
     <script src="scripts/index.js" defer></script>
 </head>
 
@@ -314,7 +315,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> <!--Quote Slider -->
 
 <section class="section">
     <div class="container">
@@ -336,9 +337,33 @@
         <div class="team">
             <div class="team__item">
                 <div class="team__wrapper">
-                    <img src="./images/team/1.png" alt="" class="team__img">
-                    <div class="team__icons"></div>
+                    <div class="team__img">
+                        <img src="./images/team/1.png" alt="">
+                        <div class="team__icons">
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-pinterest-p"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="team__text">
                     <h4 class="team__name">Matthew Dix</h4>
                     <p class="team__position">Graphic Design</p>
@@ -346,27 +371,241 @@
             </div>
             <div class="team__item">
                 <div class="team__wrapper">
-                    <img src="./images/team/1.png" alt="" class="team__img">
-                    <div class="team__icons"></div>
+                    <div class="team__img">
+                        <img src="./images/team/2.png" alt="">
+                        <div class="team__icons">
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-pinterest-p"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="team__text">
-                    <h4 class="team__name">Matthew Dix</h4>
-                    <p class="team__position">Graphic Design</p>
+                    <h4 class="team__name">Christopher Campbell</h4>
+                    <p class="team__position">Branding/UX design</p>
                 </div>
             </div>
             <div class="team__item">
                 <div class="team__wrapper">
-                    <img src="./images/team/1.png" alt="" class="team__img">
-                    <div class="team__icons"></div>
+                    <div class="team__img">
+                        <img src="./images/team/3.png" alt="">
+                        <div class="team__icons">
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-pinterest-p"></i>
+                                </a>
+                            </div>
+                            <div class="team__icon-item">
+                                <a href="#" class="team__icon-link">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="team__text">
-                    <h4 class="team__name">Matthew Dix</h4>
-                    <p class="team__position">Graphic Design</p>
+                    <h4 class="team__name">Michael Fertig</h4>
+                    <p class="team__position">Developer</p>
                 </div>
             </div>
         </div> <!-- Team div-->
     </div> <!-- Team Container -->
 </section> <!-- Team Section-->
+
+<div class="hipster__icons">
+    <div class="container">
+        <div class="hipster__icons-inner">
+            <div class="hipster__icon-itself">
+                <img src="./images/hipster/1.png" alt="hipster">
+            </div>
+        </div>
+    </div>
+</div> <!-- Hipster -->
+
+<section class="section section--no-margin-bottom">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section_sup-header">What we do</h3>
+            <h2 class="section__header-main">Some of our work</h2>
+            <div class="section__text">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="work">
+        <div class="work__column">
+            <div class="work__item">
+                <img src="./images/work/1.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+            <div class="work__item">
+                <img src="./images/work/5.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="work__column">
+            <div class="work__item">
+                <img src="./images/work/2.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+            <div class="work__item">
+                <img src="./images/work/6.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+        </div>
+        <div class="work__column">
+            <div class="work__item">
+                <img src="./images/work/3.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+        </div>
+        <div class="work__column">
+            <div class="work__item">
+                <img src="./images/work/4.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+            <div class="work__item">
+                <img src="./images/work/7.png" alt="" class="work__img">
+                <div class="work__info">
+                    <img class="work__img-inner-icon" src="./images/work/icon_info.png" alt="icon">
+                    <h3 class="work__img-inner-header">creatively designed</h3>
+                    <p class="work__img-dumb-text">Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section> <!--Work -->
+
+<div class="quote__slider quote__slider--white">
+    <div class="container">
+        <div class="quote__slider-inner">
+            <a href="#" class="quote__prev-btn">Prev</a>
+            <a href="#" class="quote__next-btn">Next</a>
+            <img src="./images/quote_slider/second_slider_img.png" alt="icon"
+                 class="quote__slider-icon quote__slider-second-icon">
+            <div class="quote__slider-quote-itself">
+                <div class="quote__slider-text">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc"
+                </div>
+                <div class="quote__slider-name">Joshua Earle</div>
+            </div>
+        </div>
+    </div>
+</div> <!--Quote Slider Second -->
+
+<section class="section section--clients">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section_sup-header">Happy Clients</h3>
+            <h2 class="section__header-main">What people say</h2>
+        </div>
+
+        <div class="clients">
+            <div class="clients__item">
+                <div class="clients__img">
+                    <img src="./images/clients/1.png" alt="1">
+                </div>
+                <div class="clients__info">
+                    <h3 class="clients__name"></h3>
+                    <div class="clients__position"></div>
+                    <div class="clients__text"></div>
+                </div>
+            </div>
+            <div class="clients__item">
+                <div class="clients__img">
+                    <img src="./images/clients/2.png" alt="1">
+                </div>
+                <div class="clients__info">
+                    <h3 class="clients__name"></h3>
+                    <div class="clients__position"></div>
+                    <div class="clients__text"></div>
+                </div>
+            </div>
+            <div class="clients__item">
+                <div class="clients__img">
+                    <img src="./images/clients/3.png" alt="1">
+                </div>
+                <div class="clients__info">
+                    <h3 class="clients__name"></h3>
+                    <div class="clients__position"></div>
+                    <div class="clients__text"></div>
+                </div>
+            </div>
+            <div class="clients__item">
+                <div class="clients__img">
+                    <img src="./images/clients/4.png" alt="1">
+                </div>
+                <div class="clients__info">
+                    <h3 class="clients__name"></h3>
+                    <div class="clients__position"></div>
+                    <div class="clients__text"></div>
+                </div>
+            </div>
+        </div> <!-- Clients -->
+    </div> <!-- Container  -->
+</section>
+
 
 </body>
 </html>
