Layout done, but no adapted yet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300i,400,500i,700|Roboto:400,700&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script:300i,400,500i,700|Montserrat:300i,400,500i,700|Roboto:400,700&display=swap"
           rel="stylesheet">
     <title>MoGo</title>
     <script src="https://kit.fontawesome.com/68f86c23c2.js" crossorigin="anonymous" defer></script>
@@ -567,9 +567,13 @@
                     <img src="./images/clients/1.png" alt="1">
                 </div>
                 <div class="clients__info">
-                    <h3 class="clients__name"></h3>
-                    <div class="clients__position"></div>
-                    <div class="clients__text"></div>
+                    <h3 class="clients__name">Matthew Dix</h3>
+                    <div class="clients__position">Graphic Design</div>
+                    <div class="clients__text">Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim.
+                    </div>
                 </div>
             </div>
             <div class="clients__item">
@@ -577,9 +581,13 @@
                     <img src="./images/clients/2.png" alt="1">
                 </div>
                 <div class="clients__info">
-                    <h3 class="clients__name"></h3>
-                    <div class="clients__position"></div>
-                    <div class="clients__text"></div>
+                    <h3 class="clients__name">Nick Carvounis</h3>
+                    <div class="clients__position">Graphic Design</div>
+                    <div class="clients__text">Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim.
+                    </div>
                 </div>
             </div>
             <div class="clients__item">
@@ -587,9 +595,13 @@
                     <img src="./images/clients/3.png" alt="1">
                 </div>
                 <div class="clients__info">
-                    <h3 class="clients__name"></h3>
-                    <div class="clients__position"></div>
-                    <div class="clients__text"></div>
+                    <h3 class="clients__name">Jaelynn Castillo</h3>
+                    <div class="clients__position">Graphic Design</div>
+                    <div class="clients__text">Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim.
+                    </div>
                 </div>
             </div>
             <div class="clients__item">
@@ -597,15 +609,227 @@
                     <img src="./images/clients/4.png" alt="1">
                 </div>
                 <div class="clients__info">
-                    <h3 class="clients__name"></h3>
-                    <div class="clients__position"></div>
-                    <div class="clients__text"></div>
+                    <h3 class="clients__name">Mike Petrucci</h3>
+                    <div class="clients__position">Graphic Design</div>
+                    <div class="clients__text">Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim.
+                    </div>
                 </div>
             </div>
-        </div> <!-- Clients -->
+        </div> <!-- Clients Div-->
     </div> <!-- Container  -->
-</section>
+</section> <!--Clients Section -->
 
+<section class="section">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section_sup-header">Out stories</h3>
+            <h2 class="section__header-main">Latest Blog</h2>
+        </div>
 
+        <div class="blog">
+            <div class="blog__item">
+                <div class="blog__img">
+                    <img src="./images/blog/1.png" alt="">
+                    <div class="blog__date">
+                        <span>15</span>
+                        Jan
+                    </div>
+                </div>
+                <div class="blog__info">
+                    <h3 class="blog__header">Lorem ipsum dolor sit amet</h3>
+                    <p class="blog__text">Consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="blog__stats">
+                    <span class="blog__stats-item">
+                        <span class="blog__stats-num">542</span>
+                        <img src="./images/blog/view.png" alt="" class="blog__stats-icon">
+                    </span>
+                    <span class="blog__stats-item">
+                        <span class="blog__stats-num">17</span>
+                        <img src="./images/blog/speech_bubble.png" alt="" class="blog__stats-icon">
+                    </span>
+                </div>
+            </div>
+            <div class="blog__item">
+                <div class="blog__img">
+                    <img src="./images/blog/2.png" alt="">
+                    <div class="blog__date">
+                        <span>14</span>
+                        Jan
+                    </div>
+                </div>
+                <div class="blog__info">
+                    <h3 class="blog__header">Lorem ipsum dolor sit amet</h3>
+                    <p class="blog__text">Consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="blog__stats">
+                    <span class="blog__stats-item">
+                        <span class="blog__stats-num">542</span>
+                        <img src="./images/blog/view.png" alt="" class="blog__stats-icon">
+                    </span>
+                    <span class="blog__stats-item">
+                        <span class="blog__stats-num">17</span>
+                        <img src="./images/blog/speech_bubble.png" alt="" class="blog__stats-icon">
+                    </span>
+                </div>
+            </div>
+            <div class="blog__item">
+                <div class="blog__img">
+                    <img src="./images/blog/3.png" alt="">
+                    <div class="blog__date">
+                        <span>12</span>
+                        Jan
+                    </div>
+                </div>
+                <div class="blog__info">
+                    <h3 class="blog__header">Lorem ipsum dolor sit amet</h3>
+                    <p class="blog__text">Consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="blog__stats">
+                    <span class="blog__stats-item">
+                        <span class="blog__stats-num">542</span>
+                        <img src="./images/blog/view.png" alt="" class="blog__stats-icon">
+                    </span>
+                    <span class="blog__stats-item">
+                        <span class="blog__stats-num">17</span>
+                        <img src="./images/blog/speech_bubble.png" alt="" class="blog__stats-icon">
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div> <!-- Container -->
+</section> <!-- Blog Section  -->
+
+<div class="map">
+    <div class="map__item">
+        <div class="map__icon">
+            <i class="fas fa-map-marker-alt"></i>
+        </div>
+        <div class="map__text">open map</div>
+    </div>
+</div> <!--Map -->
+<footer>
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__mogo footer__item">
+                <h2 class="footer__mogo-header">MoGo</h2>
+                <p class="footer__mogo-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Asperiores, aspernatur autem beatae consequatur deleniti dignissimos
+                    dolores facere, facilis magni maiores maxime officiis perspiciatis placeat
+                    quod rerum ut, vel voluptas voluptatibus.</p>
+                <div class="footer__followers">
+                    <span>15k</span> followers
+                </div>
+                <div class="footer__follow-us">
+                    <span>Follow us:</span>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-google-plus-square"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+
+                <form action="#" class="footer__form">
+                    <input type="email" class="footer__form-input" name="email" placeholder="Your Email...">
+                    <button type="submit" class="footer__form-btn">Subscribe</button>
+                </form>
+
+            </div>
+            <div class="footer__blogs footer__item">
+                <h3 class="footer__blogs-header">blogs</h3>
+
+                <div class="footer__blogs-inner">
+
+                    <div class="footer__blogs-item">
+                        <div class="footer__blogs-img">
+                            <img src="./images/footer/blog_1.png" alt="blog 1">
+                        </div>
+                        <div class="footer__blogs-info">
+                            <div class="footer__blogs-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing!
+                            </div>
+                            <div class="footer__blogs-date">Jan 21, 2020</div>
+                        </div>
+                    </div>
+
+                    <div class="footer__blogs-item">
+                        <div class="footer__blogs-img">
+                            <img src="./images/footer/blog_2.png" alt="blog 1">
+                        </div>
+                        <div class="footer__blogs-info">
+                            <div class="footer__blogs-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing!
+                            </div>
+                            <div class="footer__blogs-date">Jan 21, 2020</div>
+                        </div>
+                    </div>
+
+                    <div class="footer__blogs-item">
+                        <div class="footer__blogs-img">
+                            <img src="./images/footer/blog_3.png" alt="blog 1">
+                        </div>
+                        <div class="footer__blogs-info">
+                            <div class="footer__blogs-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing!
+                            </div>
+                            <div class="footer__blogs-date">Jan 21, 2020</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__instagram footer__item">
+
+                <div class="footer__instagram-header">instagram</div>
+
+                <div class="footer__instagram-inner">
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_1.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_2.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_3.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_4.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_5.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_6.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_7.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_8.png" alt="">
+                    </div>
+                    <div class="footer__instagram-item">
+                        <img src="./images/footer/inst_9.png" alt="">
+                    </div>
+                </div>
+                <a href="#" class="footer__instagram-link">View more photos</a>
+            </div>
+        </div> <!-- Footer Inner -->
+
+        <div class="footer__outro">
+            &copy; 2020 MoGo layout by <a href="https://t.me/nosanctuary"> Dmitry Doroshko </a>
+        </div>
+
+    </div> <!-- Container -->
+</footer> <!-- Footer -->
 </body>
 </html>
