--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 </a>
             </nav>
         </div>
+
+        <div class="header__menu">
+            <span class="header__menu-inner">Menu</span>
+        </div>
+
     </div>
 </header> <!-- Header -->
 
@@ -717,6 +722,7 @@
         <div class="map__text">open map</div>
     </div>
 </div> <!--Map -->
+
 <footer>
     <div class="container">
         <div class="footer__inner">
@@ -831,5 +837,6 @@
 
     </div> <!-- Container -->
 </footer> <!-- Footer -->
+
 </body>
 </html>
