--- a/first-task/index.html
+++ b/first-task/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Andersen Template</title>
 </head>
 <body>
@@ -28,10 +28,10 @@
         <div class="header-second__inner">
             <div class="header-second__inner-column header-second__inner-first-column">
                 <div class="header-second__inner-company">
-                    <img src="./assets/img/header-second-company.png" alt="header-second-company" class="header-second__inner-first-column-img">
+                    <img src="assets/img/header-second-company.png" alt="header-second-company" class="header-second__inner-first-column-img">
                 </div>
                 <div class="header-second__inner-offices">
-                    <img src="./assets/img/header-second-offices.png" alt="header-second-offices" class="header-second__inner-offices-img">
+                    <img src="assets/img/header-second-offices.png" alt="header-second-offices" class="header-second__inner-offices-img">
                 </div>
             </div>
             <div class="header-second__inner-column header-second__inner-second-column">2</div>
