dots added arrows bug

--- a/second-task/index.html
+++ b/second-task/index.html
@@ -88,6 +88,16 @@
         <div class="accountant__presentations">
             <a href="#">Наша презентация</a>
         </div>
+        <div class="dots">
+            <div class="dots__dot"></div>
+            <div class="dots__dot"></div>
+            <div class="dots__dot active"></div>
+            <div class="dots__dot"></div>
+        </div>
+        <div class="arrows">
+            <div class="arrows__arrow"></div>
+            <div class="arrows__arrow"></div>
+        </div>
     </div>
 </div>
 
