header-second done

--- a/first-task/index.html
+++ b/first-task/index.html
@@ -24,17 +24,24 @@
 </header>
 
 <div class="header-second">
-    <div class="container header-second__container">
-        <div class="header-second__inner">
-            <div class="header-second__inner-column header-second__inner-first-column">
-                <div class="header-second__inner-company">
-                    <img src="assets/img/header-second-company.png" alt="header-second-company" class="header-second__inner-first-column-img">
+    <div class="container">
+        <div class="header-second__row">
+            <div class="header-second__company">
+                <div class="header-second__first">
+                    <img src="./assets/img/header-second/01.png" alt="">
                 </div>
-                <div class="header-second__inner-offices">
-                    <img src="assets/img/header-second-offices.png" alt="header-second-offices" class="header-second__inner-offices-img">
+                <div class="header-second__horizontal"></div>
+                <div class="header-second__second">
+                    <img src="./assets/img/header-second/02.png" alt="">
+                    <p>Наши офисы</p>
                 </div>
             </div>
-            <div class="header-second__inner-column header-second__inner-second-column">2</div>
+            <div class="header-second__nav">
+                <div class="header-second__element">услуги</div>
+                <div class="header-second__element">О компании</div>
+                <div class="header-second__element">вакансии</div>
+                <div class="header-second__element">контакты</div>
+            </div>
         </div>
     </div>
 </div>
